--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^2.0.3",
     "bootstrap": "^5.3.2",
     "flowbite-react": "^0.7.2",
     "next": "14.1.0",
@@ -17,6 +18,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
