--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,9 +12,9 @@
     "@radix-ui/themes": "^2.0.3",
     "bootstrap": "^5.3.2",
     "flowbite-react": "^0.7.2",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
